Bug Fix: Chat Box Text not visible in dark mode

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -30,9 +30,12 @@ html, body, #game-container {
   image-rendering: pixelated;                  /* Chrome 41 */
 }
 
-/* Make Game Canvas Have Round Edges */
+/* Game Style */
 #game-container > canvas {
   border-radius: 8px;
+}
+#chat-box {
+  color: #000;
 }
 
 /* Centered Logo */
